# sample-uv-pre-commit-codebase

./: .gitignore  .pre-commit-config.yaml  .talismanrc  README.md  main.py  pyproject.toml  sample.env
tests/: sample_test.py
